# tracklist-link

./: .gitignore  Cargo.toml  LICENSE  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md
crates/tracklist-link/: Cargo.toml  build.rs  tauri.conf.json
crates/tracklist-link-proto/: Cargo.toml
crates/tracklist-link-proto/src/: lib.rs
crates/tracklist-link/capabilities/: default.json
crates/tracklist-link/examples/: smoke.rs
crates/tracklist-link/src/: commands.rs  config.rs  main.rs  tray.rs
crates/tracklist-link/src/audio/: beat.rs  capture.rs  fft.rs  mod.rs  silence.rs
crates/tracklist-link/src/server/: auth.rs  mod.rs  origin.rs  ws.rs
docs/: CS2_GSI_ARCHITECTURE.md  CS2_GSI_SAFETY.md  OBS_INTEGRATION.md  PRESETS_PLATFORM.md  PRESET_PREVIEWS.md  PROJECTM_MILKDROP3.md  REACTIVE_SIGNALS.md  SESSION_SUMMARY.md  SETTINGS_ROADMAP.md  STATS_BPM_DISTRIBUTION.md  VERIFICATION_CHECKLIST.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: PresetGrid.tsx  PresetPicker.tsx  Sidebar.tsx  VizTunePanel.tsx
frontend/src/components/tabs/: AboutTab.tsx  PresetsTab.tsx  SettingsTab.tsx  StatusTab.tsx  VisualizerTab.tsx
frontend/src/lib/: bpm.ts  cn.ts  live-audio.ts  obs-storage.ts  obs-websocket.ts  preset-catalog.ts  tauri.ts  use-collections.ts  viz-settings.ts
