[package]
name = "tracklist-link-proto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Wire protocol types shared between the Tracklist Link companion and its clients."

[dependencies]
serde.workspace = true
serde_json.workspace = true
