[package]
name = "tracklist-link"
version = "0.7.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tracklist Link — a local audio-capture companion for Tracklist. Runs on the streamer's machine, never touches the network beyond 127.0.0.1."

[[bin]]
name = "tracklist-link"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tracklist-link-proto = { path = "../tracklist-link-proto" }

tokio.workspace = true
cpal.workspace = true
realfft.workspace = true
rustfft.workspace = true

tokio-tungstenite.workspace = true

serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true

rand.workspace = true
base64.workspace = true
subtle.workspace = true

directories.workspace = true
toml.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

anyhow.workspace = true
thiserror.workspace = true

tauri.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-autostart.workspace = true
tauri-plugin-window-state.workspace = true
